Upgrade packages to resolve security issues. Upgrade configs for new versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Challenge",
-  "description": "Via TRM Code Challenge - Travel Term",
+  "description": "Code Challenge - Travel Term",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,20 +11,23 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react-dom": "^16.13.0",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.6",
+    "@babel/node": "7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/polyfill": "7.8.3",
+    "@babel/preset-flow": "7.8.3",
+    "@babel/register": "7.8.6",
     "babel-eslint": "8.2.1",
     "babel-preset-env": "1.6.1",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.8",
+    "babel-loader": "8.0.6",
+    "@babel/preset-react": "7.8.3",
+    "css-loader": "3.4.2",
     "eslint": "4.15.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
@@ -32,13 +35,13 @@
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "7.5.1",
     "eslint-plugin-standard": "3.0.1",
-    "eslint-watch": "3.1.3",
+    "eslint-watch": "6.0.1",
     "express": "4.16.2",
     "moment": "2.20.1",
     "npm-run-all": "4.1.2",
-    "open": "0.0.5",
+    "open": "7.0.2",
     "style-loader": "0.19.1",
-    "webpack": "3.10.0",
+    "webpack": "4.42.0",
     "webpack-dev-middleware": "1.12.2",
     "webpack-hot-middleware": "2.21.0"
   },
